--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.1",
-    "grunt-contrib-jshint": "^0.11.3"
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-ts": "^4.2.0"
   }
 }
